--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="zh-CN">
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
     <title>友情链接</title>
+    <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAAXNSR0IArs4c6QAAAARzQklUCAgI
+    CHwIZIgAAAPcSURBVEiJrZVvaJVVHMc/5zzP7nafu3u3iUOsaVAKMgtyjDJfBAaOrYUb1YupEyXX
+    30WwxnzRikpoUmbbcMZ00Jr0Ip1GUPYiMMT5IlZpBMGMjDnayDAmU+/un+eeXy+eZ/fP/lN+4cB5
+    OH8+v+/vd855AKSurk5KS0vFcRxxHEcqKyulvLxcgLvT2tvbxRgj1dXV0t3dLUopCYfDUlFRIYFA
+    4K5AlNZaent7CQaDtLW10dHRweDgIGVlZfT19WFhYWqakfWPoywbMYIyBpEU6tsjyG9DLCXl0+bK
+    KUJtbkA3dpKyAqCU12YkBgTU5Dhy5i0YOvEfIP0JsHRmVOuFQxWD/cXbuF++N+/wvCt115gXtREv
+    4mwH84aqkE3bUfmhpSEqVITqn8aU3ANagWWBZS8OEYMav4LuaWBfvaLlBWvOFDtn/iMNqJn8L0di
+    sP7+AzmwhZfq4nx0YBoFuK7iyCeZKqRrkofGHYgiOrA8ABD4/Qfcrnr2P5ugvWWSkGNQCq6M5rNh
+    azw9L52u5FOtSK6xRRwI1tXvSX68i6Ztk7S3ZgAA69bGWbM6U4l0Tz/wKGqxE5QhYF0fIXWolqat
+    f9JzMEaowORk2NLQd8ikv9OhG7tgWSb0yEVMVz37G1zebIljW/OXMDvcNGTluo3cWNKEwPDnhMwU
+    YgsfHAevrLPnwbVxv0NW4fXrZzGbahYBGALDp0n0NACwCsgn9zZn42LA9dlOTGp6UUDe8CCJ3j3Y
+    LxfjHpsiLMKPChwRtA/KhnwnUOX3M6kb/WUBgGBf+JRk7w6s5hDu9iLUqVVcXaGpFUiI4rTWvIvi
+    fRRRb0kOMpMupTEDMVAz5gRlBOfiZ9wZ2Iv9/Arc2kJQFmAAFxr/Qt8pILD3Q2KVz6HEoLtqOTp2
+    mbbpm9xyvURawDveloKdjGEe3ObRRQhf+prbx3ZjvRIh9WSRf4z8CEVhR0F2/kzy/idAacBCNu9m
+    KBJh6qdv0k5yLkbq0ldgEiBC4EI/Uz312K+FSdWEcwF+DuybT2OKywiNngcEHf8HzrQxtWWf9+75
+    yn27JkagKYK1o5P4yVexmyO4VYW+4VwpXOJ5a7BSMVKn3kA/VEXw2hBSWk4UTSByL4nJsblOAEgm
+    SJ1oJvjiStzqknkBXnptgvY4KauAWOt5Cn89iyrdQPSZbgAStyayTS/w07ovD3V4NeLgFzsXgQh5
+    56Zh8iDJx/agVRIjNijIv3yS+NHGZUB8ObtKiD5sQ3k+aMtbIv5NvuGij8eRjYeR4rWAojAxwe3O
+    nTmbLglJK+QX3cY7wQZIAonZ933udsuH/A/9C166lREbtYPeAAAAAElFTkSuQmCC">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,16 +61,75 @@
             background-color: #e0e0e0;
         }
     </style>
-</head>
+  </head>
 <body>
     <div class="container">
         <h1>友情链接</h1>
+        <a href="#TG">TG群组&频道</a> | <a href="#website">网站</a> | <a href="#QQ">QQ群</a>
+        
+        <!-- | <a href="#item1">项目1</a> | <a href="#item1">项目1</a> | <a href="#item1">项目1</a> -->
+
+        <h2 id="TG">TG群组&频道</h2>
+        <ul class="link-list">
+            <li class="link-item"><a href="https://t.me/MEME9688127">柠🍋萌π隊 ACG更新频道</a></li>
+            <li class="link-item"><a href="https://t.me/RhineLibrary">莱茵图书馆 黄油/RPG/GAL/SLG/ADV/3D</a></li>
+            <li class="link-item"><a href="https://t.me/fulilove52">反差婊福利姬</a></li>
+            <li class="link-item"><a href="https://t.me/stu_collection">[NSFW]STUDENT_2333's Collection</a></li>
+            <li class="link-item"><a href="https://t.me/kkaifenxiang">黑科技软件资源分享</a></li>
+            <li class="link-item"><a href="https://t.me/yydsktm1290/578">优质频道群组推荐</a></li>
+            <li class="link-item"><a href="https://t.me/bdpd8">8度频道</a></li>
+            <li class="link-item"><a href="https://t.me/AWAvenue">秋风のとおり道</a></li>
+            <li class="link-item"><a href="https://t.me/geekshare">极客分享</a></li>
+            <li class="link-item"><a href="https://t.me/apkrxwy">安卓破解分享</a></li>
+            <li class="link-item"><a href="https://t.me/nsfw717">NSFW❤️超天醬中字公式&Rule34❤️</a></li>
+            <li class="link-item"><a href="https://t.me/QuantX">莫离 - 万事屋</a></li>
+            <li class="link-item"><a href="https://t.me/tuidaoGFW">免费节点频道</a></li>
+            <li class="link-item"><a href="https://t.me/TgTrillion">电报指南 & 精品排行榜</a></li>
+            <li class="link-item"><a href="https://t.me/Aliyun_4K_Movies">阿里云盘4K影视</a></li>
+            <li class="link-item"><a href="https://t.me/clbfxs">曹老板白嫖分享社</a></li>
+            <li class="link-item"><a href="https://t.me/yxzbp">严选之白嫖</a></li>
+            <li class="link-item"><a href="https://t.me/BaccanoSoul">🎏「 彼岸情报🔎！」🎏薅羊毛情报（网站/资源/软件/限免APP）见闻社</a></li>
+            <li class="link-item"><a href="https://t.me/FuckyouWasteTrump">二次元涩涩 ASMR</a></li>
+            <li class="link-item"><a href="https://t.me/+HpARZFqr_QpjYmRl">私密图片（NSFW）㊙️㊙️㊙️</a></li>
+            <li class="link-item"><a href="https://t.me/asmrssos">ASMR</a></li>
+            <li class="link-item"><a href="https://t.me/zijianzhang710">安利安利［NSFW］</a></li>
+
+        <h2 id="website">网站</h2>
+        <ul class="link-list">
+            <li class="link-item"><a href="https://www.hnav.moe/">萌H导航 - 丰富实用的ACG导航</a></li>
+            <li class="link-item"><a href="https://www.wobbay.xyz/">Wobbay的ACGN资源小屋</a></li>
+            <li class="link-item"><a href="https://off.cx/">Niute Fony</a></li>
+
+        <h2 id="QQ">QQ群</h2>
+        <ul class="link-list">
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=SdTCuQne">【pixiv☆p站动漫头像壁纸】</a><br>群号：434573456</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=XjSdIVXw">【pixiv★p站动漫头像壁纸②】</a><br>群号：1065369865</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=K03nTwil">【pixiv✪p站动漫头像壁纸③】</a><br>群号：1125759021</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=0uu0M1xl">【绅士资源交流群】</a><br>群号：1014773588</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=rRpVYgsX">【鹅城】</a><br>群号：487991385</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=R7RpypAM">【不一般的游戏群】</a><br>群号：758362945</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=L8sEFRKo">【风尘绅士总群】</a><br>群号：873806652</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=lk4ZYzCb">【依依撒嘛粉丝群】</a><br>群号：464580210</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=2MImkJAg">【依依撒嘛粉丝群】</a><br>群号：992084299</li>
+
+
+        <!-- <ul class="link-list">
+            <li class="link-item"><a href="#">友情链接 1</a></li>
+            <li class="link-item"><a href="#">友情链接 2</a></li>
+            <li class="link-item"><a href="#">友情链接 3</a></li>
+
+
         <ul class="link-list">
             <li class="link-item"><a href="#">友情链接 1</a></li>
             <li class="link-item"><a href="#">友情链接 2</a></li>
             <li class="link-item"><a href="#">友情链接 3</a></li>
-            <!-- Add more link items as needed -->
-        </ul>
+
+
+        <ul class="link-list">
+            <li class="link-item"><a href="#">友情链接 1</a></li>
+            <li class="link-item"><a href="#">友情链接 2</a></li>
+            <li class="link-item"><a href="#">友情链接 3</a></li>
+        </ul> -->
     </div>
 </body>
 </html>
