--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        h1 {
+        h1,footer,h3 {
             text-align: center;
             color: #333;
         }
@@ -65,7 +65,8 @@
 <body>
     <div class="container">
         <h1>友情链接</h1>
-        <a href="#TG">TG群组&频道</a> | <a href="#website">网站</a> | <a href="#QQ">QQ群</a>
+        <h3>个人主页：<a href="https://domain.zgqinc.gq">domain.zgqinc.gq</a></h3>
+        <h3 class="catalog"><a href="#TG">TG群组&频道</a> | <a href="#website">网站</a> | <a href="#QQ">QQ群</a></h3>
         
         <!-- | <a href="#item1">项目1</a> | <a href="#item1">项目1</a> | <a href="#item1">项目1</a> -->
 
@@ -131,5 +132,10 @@
             <li class="link-item"><a href="#">友情链接 3</a></li>
         </ul> -->
     </div>
+
+    <footer>
+        <p><span style="color: #333"><a>&copy; 2024 ZGQ Inc.</a></p>						
+    </footer>
+
 </body>
 </html>
