--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
             <li class="link-item"><a href="https://t.me/+HpARZFqr_QpjYmRl">私密图片（NSFW）㊙️㊙️㊙️</a></li>
             <li class="link-item"><a href="https://t.me/asmrssos">ASMR</a></li>
             <li class="link-item"><a href="https://t.me/zijianzhang710">安利安利［NSFW］</a></li>
+            <li class="link-item"><a href="https://t.me/appmew">APP喵-阿喵软件资源共享</a></li>
+            <li class="link-item"><a href="https://t.me/badupindao">8度频道</a></li>
+            <li class="link-item"><a href="https://t.me/qq_apk">破解VPN-精品APP-破解软件中心</a></li>
+            <li class="link-item"><a href="https://t.me/iosapp520">IOS-Crack频道</a></li>
 
         <h2 id="website">网站</h2>
         <ul class="link-list">
