--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <h2 id="QQ">QQ群</h2>
         <ul class="link-list">
             <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=SdTCuQne">【pixiv☆p站动漫头像壁纸】</a><br>群号：434573456</li>
-            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=XjSdIVXw">【pixiv★p站动漫头像壁纸②】</a><br>群号：1065369865</li>
-            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=K03nTwil">【pixiv✪p站动漫头像壁纸③】</a><br>群号：1125759021</li>
+            <!-- <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=XjSdIVXw">【pixiv★p站动漫头像壁纸②】</a><br>群号：1065369865</li>
+            <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=K03nTwil">【pixiv✪p站动漫头像壁纸③】</a><br>群号：1125759021</li> -->
             <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=0uu0M1xl">【绅士资源交流群】</a><br>群号：1014773588</li>
             <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=rRpVYgsX">【鹅城】</a><br>群号：487991385</li>
             <li class="link-item"><a href="https://jq.qq.com/?_wv=1027&k=R7RpypAM">【不一般的游戏群】</a><br>群号：758362945</li>
