--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <li class="link-item"><a href="https://t.me/badupindao">8度频道</a></li>
             <li class="link-item"><a href="https://t.me/qq_apk">破解VPN-精品APP-破解软件中心</a></li>
             <li class="link-item"><a href="https://t.me/iosapp520">IOS-Crack频道</a></li>
+            <li class="link-item"><a href="https://t.me/LCGFX">分享免费资源，实用软件、开源项目、网站工具</a></li>
 
         <h2 id="website">网站</h2>
         <ul class="link-list">
