--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <li class="link-item"><a href="https://t.me/MEME9688127">柠🍋萌π隊 ACG更新频道</a></li>
             <li class="link-item"><a href="https://t.me/RhineLibrary">莱茵图书馆 黄油/RPG/GAL/SLG/ADV/3D</a></li>
             <li class="link-item"><a href="https://t.me/fulilove52">反差婊福利姬</a></li>
-            <li class="link-item"><a href="https://t.me/stu_collection">[NSFW]STUDENT_2333's Collection</a></li>
+            <li class="link-item"><a href="https://t.me/stu_collection3">[NSFW]STUDENT_2333's Collection</a></li>
+            <li class="link-item"><a href="https://t.me/gulaiguq_baipiao2">顾来顾去的全新白嫖频道</a></li>
             <li class="link-item"><a href="https://t.me/kkaifenxiang">黑科技软件资源分享</a></li>
             <li class="link-item"><a href="https://t.me/yydsktm1290/578">优质频道群组推荐</a></li>
             <li class="link-item"><a href="https://t.me/bdpd8">8度频道</a></li>
