--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
         .link-item a:hover {
             background-color: #e0e0e0;
         }
-        li {
-            
-        }
         img {
             margin-left: 10px;
             width: 30px;
             justify-content: center;
-        
+            align-items: center;
+            vertical-align: middle;
         }
     </style>
   </head>
